--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,3 @@
-[build-system]
-requires = ["setuptools"]
-build-backend = "setuptools.build_meta"
-
 [project]
 name = "ksrpc"
 authors = [
@@ -39,16 +35,16 @@ server = [
     'uvicorn[standard]',
 ]
 
-[tool.setuptools]
-packages = [
-    "ksrpc",
-    "ksrpc.app",
-    "ksrpc.connections",
-    "ksrpc.hack",
-    "ksrpc.serializer",
-    "ksrpc.server",
-    "ksrpc.utils",
-]
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-[tool.setuptools.dynamic]
-version = { attr = "ksrpc._version.__version__" }
+[tool.hatch.version]
+path = "ksrpc/_version.py"
+
+[tool.hatch.build.targets.wheel]
+packages = ["ksrpc"]
+include-package-data = true
+
+[tool.hatch.build.targets.sdist]
+include = ["ksrpc*"]
