--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ classifiers = [
 dynamic = ["version"]
 
 dependencies = [
-    "pandas",
+    "pandas<3.0",
     "aiohttp",
     "loguru",
     "psutil",
